--- a/exceptions.yaml
+++ b/exceptions.yaml
@@ -1,7 +1,4 @@
 pipelines:
   MyPipeline:
-    - "12345"
-    - "service-001"
-  AnotherPipeline:
-    - "abcd"
-    - "xyz-789"
+    - "Leap2"        # repo name from Repo B
+    - "AnotherRepo"
