--- a/exceptions.yaml
+++ b/exceptions.yaml
@@ -1,7 +1,12 @@
 exceptions:
+  global:
+    sonar-skip: true
+    checkmarx-skip: false
+
   sonar:
-    - Leap-stream/Leap
-    - AnotherOrg/RepoX
-  checkmarx:
     - Leap-stream/Leap2
+    - AnotherOrg/RepoX
+
+  checkmarx:
+    - Leap-stream/Leap3
     - AnotherOrg/RepoY
