--- a/exceptions.yaml
+++ b/exceptions.yaml
@@ -1,12 +1,12 @@
 exceptions:
   global:
     sonar-skip: true
-    checkmarx-skip: false
+    checkmarx-skip: true
 
   sonar:
     - Leap-stream/Leap3
     - AnotherOrg/RepoX
 
   checkmarx:
-    - Leap-stream/Leap2
+    - Leap-stream/Leap3
     - AnotherOrg/RepoY
